# papercut

./: .gitignore  Architecture.md  CLAUDE.md  LICENSE  pyproject.toml
.meta/: 260709-그록4.5가격조사.md  260709-미네루요구사양조사.md  260710-그록4.3품질비교.md  260710-미네루3.4API조사.md
src/ff_papercut/: __init__.py  for-agent-layerinfo.md
src/ff_papercut/l0/: __init__.py  for-agent-layerinfo-l0.md
src/ff_papercut/l0/llmresult/: LLMUsage.py  TextResult.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l0/paperdoc/: Figure.py  PaperDocument.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l0/sectioner/: Sectioner.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l1/: __init__.py  for-agent-layerinfo-l1.md
src/ff_papercut/l1/extractor/: Extractor.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l1/llmclient/: LLMClient.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l2/: __init__.py  for-agent-layerinfo-l2.md
src/ff_papercut/l2/summarizer/: Summarizer.py  __init__.py  for-agent-moduleinfo.md
src/ff_papercut/l2/translator/: Translator.py  __init__.py  for-agent-moduleinfo.md
tests/l0/llmresult/: test_llmresult.py
tests/l0/paperdoc/: test_paperdoc.py
tests/l0/sectioner/: test_sectioner.py
tests/l1/extractor/: test_extractor.py
tests/l1/llmclient/: test_llmclient.py
tests/l2/summarizer/: test_summarizer.py
tests/l2/translator/: test_translator.py
